// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VideoMetadata /> renders <VideoMetadata /> 1`] = `
<div
  className="video-metadata"
>
  <h3>
    Video Title
  </h3>
  <div
    className="video-stats"
  >
    <span>
      NaN
       views
    </span>
    <div
      className="video-actions"
    >
      <rating
        dislikeCount={100}
        likeCount={1000}
      />
      <Button
        as="button"
        basic={true}
        icon={true}
        labelPosition="left"
      >
        <Icon
          as="i"
          name="share"
        />
        Share
      </Button>
      <Button
        as="button"
        basic={true}
        icon={true}
      >
        <Icon
          as="i"
          name="add circle"
        />
      </Button>
      <Button
        as="button"
        basic={true}
        icon={true}
      >
        <Icon
          as="i"
          name="ellipsis horizontal"
        />
      </Button>
    </div>
  </div>
  <Divider />
</div>
`;

exports[`<VideoMetadata /> renders <VideoMetadata /> with viewCount prop 1`] = `
<div
  className="video-metadata"
>
  <h3>
    Video Title
  </h3>
  <div
    className="video-stats"
  >
    <span>
      10,000
       views
    </span>
    <div
      className="video-actions"
    >
      <rating
        dislikeCount={100}
        likeCount={1000}
      />
      <Button
        as="button"
        basic={true}
        icon={true}
        labelPosition="left"
      >
        <Icon
          as="i"
          name="share"
        />
        Share
      </Button>
      <Button
        as="button"
        basic={true}
        icon={true}
      >
        <Icon
          as="i"
          name="add circle"
        />
      </Button>
      <Button
        as="button"
        basic={true}
        icon={true}
      >
        <Icon
          as="i"
          name="ellipsis horizontal"
        />
      </Button>
    </div>
  </div>
  <Divider />
</div>
`;
